--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@ body{
     max-width: auto;
     text-align: center;
     background-color:aliceblue;
-    margin:20%;
-    padding:20%;
     font-family: sans-serif;
 }
 h1{
@@ -16,5 +14,23 @@ h2{
 }
 
 .instagram {
-    display:inline;
+   /* display:inline;*/
+}
+
+p{
+    max-width: 50%;
+    margin-left: auto;
+    margin-right:auto;
+}
+
+h1, h2{
+    margin-bottom: auto;
+}
+h3{
+    margin-top: 3px;
+}
+
+ul li a{
+    text-align: left;
+    padding-left: -30;
 }
